deploy/kind/boots.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: boots
spec:
  selector:
    matchLabels:
      app: boots
  template:
    metadata:
      annotations:
        k8s.v1.cni.cncf.io/networks: '[{"interface":"net1","mac":"08:00:27:00:00:00","ips":["172.30.0.1/16"],"name":"tink-dev","namespace":"default"}]'
      labels:
        app: boots
    spec:
      containers:
      - name: boots
        image: quay.io/tinkerbell/boots:latest
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        command:
        - /boots
        - -dhcp-addr=0.0.0.0:67
        - -tftp-addr=0.0.0.0:69
        - -http-addr=0.0.0.0:80
        - -syslog-addr=0.0.0.0:514
        - -log-level=DEBUG
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        - containerPort: 67
          name: dhcp
          protocol: UDP
        - containerPort: 69
          name: tftp
          protocol: UDP
---
apiVersion: v1
kind: Service
metadata:
  name: boots
spec:
  selector:
    app: boots
  ports:
  - name: http
    port: 80
    targetPort: http
  - name: dhcp
    port: 67
    protocol: UDP
    targetPort: dhcp
  - name: tftp
    port: 69
    protocol: UDP
    targetPort: tftp
