deploy/kind/hegel.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hegel
spec:
  selector:
    matchLabels:
      app: hegel
  template:
    metadata:
      labels:
        app: hegel
    spec:
      containers:
      - name: hegel
        image: quay.io/tinkerbell/hegel:latest
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 42115
          name: hegel-metadata
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: hegel
spec:
  ports:
  - name: hegel-metadata
    port: 42115
    targetPort: hegel-metadata
  selector:
    app: hegel
---
apiVersion: v1
kind: Service
metadata:
  name: hegel-node
spec:
  type: NodePort
  selector:
    app: hegel
  ports:
  - name: hegel-metadata
    port: 42115
    targetPort: hegel-metadata
