deploy/kind/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tink-mirror
spec:
  selector:
    matchLabels:
      app: tink-mirror
  template:
    metadata:
      annotations:
        k8s.v1.cni.cncf.io/networks: '[{"interface":"net1","mac":"08:00:28:00:00:00","ips":["172.30.0.2/16"],"name":"tink-dev","namespace":"default"}]'
      labels:
        app: tink-mirror
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        volumeMounts:
        - mountPath: /usr/share/nginx/html
          name: webroot
      volumes:
      - name: webroot
        persistentVolumeClaim:
          claimName: webroot
      - name: tink-server-certificate
        secret:
          secretName: tink-server-certificate
---
apiVersion: v1
kind: Service
metadata:
  name: tink-mirror
spec:
  type: LoadBalancer
  selector:
    app: tink-mirror
  ports:
  - name: http
    port: 80
    targetPort: http
