deploy/kind/tink-server-migration.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tink-server-migration
spec:
  selector:
    matchLabels:
      app: tink-server-migration
  template:
    metadata:
      labels:
        app: tink-server-migration
      annotations:
        k8s.v1.cni.cncf.io/networks: '[{"interface":"net1","mac":"08:00:35:00:00:00","ips":["172.30.0.4/16"],"name":"tink-dev","namespace":"default"}]'
    spec:
      containers:
      - name: tink-server-migration
        image: quay.io/tinkerbell/tink:latest
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 42113
          name: grpc-authority
          protocol: TCP
        - containerPort: 42114
          name: http-authority
          protocol: TCP
        volumeMounts:
        - mountPath: /certs
          name: tink-server-certificate
          readOnly: true
        livenessProbe:
          failureThreshold: 30
          httpGet:
            path: /cert
            port: http-authority
            scheme: HTTP
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 2
        args:
        - --facility=onprem
        - --ca-cert=/certs/ca.crt
        - --tls-cert=/certs/tls.crt
        - --tls-key=/certs/tls.key
      volumes:
      - name: tink-server-certificate
        secret:
          secretName: tink-server-certificate
---
apiVersion: v1
kind: Service
metadata:
  name: tink-server-migration
spec:
  selector:
    app: tink-server-migration
  ports:
  - name: grpc-authority
    port: 42113
    targetPort: grpc-authority
  - name: http-authority
    port: 42114
    targetPort: http-authority
