deploy/kind/tink-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tink-server
spec:
  selector:
    matchLabels:
      app: tink-server
  template:
    metadata:
      labels:
        app: tink-server
    spec:
      containers:
      - name: tink-server
        image: quay.io/tinkerbell/tink:latest
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 42113
          name: grpc-authority
          protocol: TCP
        - containerPort: 42114
          name: http-authority
          protocol: TCP
        volumeMounts:
        - mountPath: /certs
          name: tink-server-certificate
          readOnly: true
        livenessProbe:
          failureThreshold: 30
          httpGet:
            path: /cert
            port: http-authority
            scheme: HTTP
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 2
        args:
        - --facility=onprem
        - --ca-cert=/certs/ca.crt
        - --tls-cert=/certs/tls.crt
        - --tls-key=/certs/tls.key
      volumes:
      - name: tink-server-certificate
        secret:
          secretName: tink-server-certificate
---
apiVersion: v1
kind: Service
metadata:
  name: tink-server
spec:
  type: NodePort
  selector:
    app: tink-server
  ports:
  - name: grpc-authority
    port: 42113
    targetPort: grpc-authority
  - name: http-authority
    port: 42114
    targetPort: http-authority
